# ZenEdit

./: .gitignore  Makefile  README.md  ZenEdit  meson.build
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
src/: main.cpp  zenedit.cpp  zenedit.h
